procps-3.2.1 --> procps-3.2.2

avoid warning about -lncurses when not linking -- thanks FLWM

procps-3.2.0 --> procps-3.2.1

build even w/ curses in an odd location -- thanks to Segher Boessenkool
ps: STAT flags for fg process group and session leader
ps: STAT flags for swapped out process dropped (was broken)
ps: new -M and Z options for security data (SE Linux, etc.)
slabtop: detect broken /proc/slabinfo -- thanks to Fabian Frederick
slabtop: ensure that error messages show up on the screen -- FF again

procps-3.1.15 --> procps-3.2.0

build on IA-64 again                            #227933
pmap: output like Solaris 9, not Solaris 7
ps: also handle SELinux on the 2.4.xx kernels
top: during a ^Z, the terminal was messed up     #228822
future-proof the tty handling   (thanks to Zhou Wei)
slabtop  (Chris Rivera and Robert Love)          #226778
pmap: detect the primary stack
pmap: -d format
free: report high and low memory

procps-3.1.14 --> procps-3.1.15

install to /lib64 if it exists
hide kernel PID bug (Linux 2.4.13-pre1 to 2.4.MAX)   #217278 #219730 #217525 #224470
ps: faster threaded display
top: auto-margin problem                           #217559
ps: support NSA SELinux, all builds, Linux 2.6+    #193648
sysctl: tweak man page for ESR's broken parser

procps-3.1.13 --> procps-3.1.14

top: displays on more genuine serial terminals
handle 32-bit dev_t of Linux 2.6
ps: finally, m and -m satisfy the original design
ps: distinct per-thread and whole-process pending signals

procps-3.1.12 --> procps-3.1.13

ps: can display NPTL threads w/ kernel patch
no seLinux for now (new kernel interface)

procps-3.1.11 --> procps-3.1.12

ps: explicit width ("ps -o pid,wchan:42,args")
ps: $PS_FORMAT works properly                    #201575
top: new Linux 2.6.0-test4 CPU stats shown
top: multiple -p options work again
top: fixed 4 GB wrap-around
ps: has a set of tests to ensure correctness
man page: /var/run/utmp, not /etc/utmp           #206583